package by.amushinsky.school.userservice.user.principal;

import by.amushinsky.school.userservice.user.User;

public class Principal extends User {
}
