@startuml
'skinparam linetype polyline
'skinparam linetype ortho
left to right direction


namespace userservice {
  class User {
    + name
    + login
    + password
    + status
  }

  class Principal {
  }

  class Teacher {
    + passportNumber
    + salary
    + bonus
  }

  class Parent {
  }

  class Pupil {
    + birthDate
    + grade
  }

  class Address {
    + city
    + street
    + house
    + apartment
    + zipCode
    + phoneNumber
    + email
  }

  User <|- Principal
  User <|-- Teacher
  User <|-- Parent
  User <|-- Pupil
  User "1" o- "1" Address : lives by >
  Pupil "*" -l- "*" Parent: \n\thas\n >
}


together {

  namespace scheduleservice  {
    class userservice.Teacher {
        + name
    }

    class Schedule {
        + year
    }

    class Lesson {
        + date
        + marks
        + absentPupils
    }

    class HomeWork {
        + description
    }

    Schedule "1" *-l> "*" Lesson : \ncontains\n
    Lesson "1" *-l> "1" HomeWork : \ncontains\n
  }

  namespace curriculumservice {
    class Curriculum {
        + grade
    }

    class Course {
        + lessonCount
    }

    class Subject {
        + name
    }

    Curriculum "1" *-u> "*" Course : \ncontains\n
    Course "1" *-u> "1" Subject : \ncontains\n
  }
}



namespace schoolclassservice {
  class SchoolClass {
      + letter
      + grade
      + year
  }
}




schoolclassservice .-> userservice  : gets info about teachers
schoolclassservice .-> userservice  : gets info about pupils
scheduleservice .-> curriculumservice : gets info about courses
scheduleservice .-r> schoolclassservice : gets info about classes

@enduml
